Fix CSS issues with & .spacer and #tabs z-index

--- a/src/CSS/general.css
+++ b/src/CSS/general.css
@@ -210,7 +210,7 @@ ul#tabs {
   justify-content: space-between;
   width: 100vw;
   height: var(--size);
-  z-index: 1;
+  z-index: 2;
 
   a {
     position: relative;
@@ -989,7 +989,7 @@ footer {
   }
 }
 
-&.spacer {
+& .spacer {
   flex-grow: 1;
 }
 
